policies/deployments-should-have-at-least-one-ingress-network-policy.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: deployments-should-have-at-least-one-ingress-network-policy
spec:
  categories:
  - Security Best Practices
  - Zero Trust
  criteriaLocked: true
  description: Alerts if deployments are missing an ingress Network Policy
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on kube-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: kube-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-kube-apiserver namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-kube-apiserver
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-kube-scheduler namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-kube-scheduler
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-kube-controller-manager namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-kube-controller-manager
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-sdn namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-sdn
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-network-operator namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-network-operator
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-multus namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-multus
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-cluster-version namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-cluster-version
        label: null
    image: null
    expiration: null
  - name: Don't alert on node-ca DaemonSet in the openshift-image-registry namespace
    deployment:
      name: node-ca
      scope:
        cluster: ''
        namespace: openshift-image-registry
        label: null
    image: null
    expiration: null
  - name: Don't alert on host network usage within the openshift-etcd namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-etcd
        label: null
    image: null
    expiration: null
  - name: Don't alert on host network usage within the openshift-machine-config-operator
      namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-machine-config-operator
        label: null
    image: null
    expiration: null
  - name: Don't alert on host network usage within the openshift-monitoring namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-monitoring
        label: null
    image: null
    expiration: null
  - name: Don't alert on host network usage within the openshift-machine-api namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-machine-api
        label: null
    image: null
    expiration: null
  - name: Don't alert on host network usage within the openshift-cluster-node-tuning-operator
      namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-cluster-node-tuning-operator
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - Deployments should have at least one ingress Network Policy
  policySections:
  - sectionName: Alert on missing ingres Network Policy
    policyGroups:
    - fieldName: Has Ingress Network Policy
      booleanOperator: OR
      negate: false
      values:
      - value: 'false'
  rationale: Pods that lack ingress Network Policies have unrestricted reachability
    on the network and may be exposed to attacks
  remediation: Create and apply an appropriate Network Policy of type ingress to all
    Deployments. See https://kubernetes.io/docs/concepts/services-networking/network-policies/
    for details
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: true
